Fix time frame selection inputs too small on iPhone

--- a/src/main/webapp/META-INF/resources/css/summary.css
+++ b/src/main/webapp/META-INF/resources/css/summary.css
@@ -177,6 +177,11 @@
     margin: 3em;
 }
 
+#input-timeframeStart,
+#input-timeframeEnd {
+    text-align: center;
+}
+
 /* Responsive */
 @media (max-width:700px){
     .mobileCentered {
